--- a/catalog.html
+++ b/catalog.html
@@ -43,6 +43,10 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
+              <svg class="navigation-link-basket" aria-hidden="true" focusable="false" width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.645874 1.15641C0.645874 0.788223 0.944351 0.489746 1.31254 0.489746H3.91999C4.23774 0.489746 4.51133 0.714003 4.57369 1.02557L5.11879 3.74906H15.6535C15.8522 3.74906 16.0405 3.83767 16.1672 3.99076C16.2938 4.14384 16.3456 4.34544 16.3084 4.54061L15.2654 10.0097L15.2644 10.0147L15.2644 10.0147C15.1743 10.4683 14.9276 10.8757 14.5673 11.1657C14.209 11.4542 13.761 11.6082 13.3011 11.601H6.97639C6.51652 11.6082 6.06854 11.4542 5.71016 11.1657C5.35008 10.8759 5.10338 10.4686 5.0132 10.0153L5.01308 10.0147L3.92432 4.57495C3.91985 4.5567 3.91612 4.53816 3.91319 4.51936L3.37353 1.82308H1.31254C0.944351 1.82308 0.645874 1.5246 0.645874 1.15641ZM6.5285 12.8757C5.80055 12.8757 5.21043 13.4658 5.21043 14.1938C5.21043 14.9217 5.80055 15.5118 6.5285 15.5118C7.25644 15.5118 7.84656 14.9217 7.84656 14.1938C7.84656 13.4658 7.25644 12.8757 6.5285 12.8757ZM13.6985 12.8757C12.9705 12.8757 12.3804 13.4658 12.3804 14.1938C12.3804 14.9217 12.9705 15.5118 13.6985 15.5118C14.4264 15.5118 15.0166 14.9217 15.0166 14.1938C15.0166 13.4658 14.4264 12.8757 13.6985 12.8757Z" fill="#2D3440"/>
+                </svg>
+
               <span class="main-navigation-basket">
                 2 товара
               </span>
@@ -71,82 +75,123 @@
         <h2 class="catalog-filter-title text-bold">Сливочное мороженое</h2>
         <form class="catalog-form" action="https://echo.htmlacademy.ru/" method="GET">
           <fieldset class="catalog-form-group">
+            <div class="range-wrapper-inputs">
             <legend class="catalog-form-group-title">Сортировка:</legend>
+            </div>
+            <div class="catalog-form-label-wrap">
             <label class="catalog-form-label">
               <select class="catalog-form-select" name="sorting">
                 <option value="top">по популярности</option>
                 <option value="price">по цене</option>
               </select>
             </label>
+          </div>
           </fieldset>
           <fieldset class="catalog-form-group">
+            <div class="range-wrapper-inputs">
             <legend class="catalog-form-group-title">Цена:</legend>
-            <button class="range-toggle toggle-min" type="button">
-              <span class="visually-hidden">Изменить минимальную цену.</span>
-            </button>
-            <button class="range-toggle toggle-max" type="button">
-              <span class="visually-hidden">Изменить максимальную цену.</span>
-            </button>
             <label class="catalog-form-label">
-              <input class="catalog-form-input" type="number" name="min-price" placeholder="100" min="100" step="10"> ₽
+              <input class="catalog-form-input" type="number" name="min-price" value="100" min="100" step="10"> ₽
             </label>
             <label class="catalog-form-label">
-              - <input class="catalog-form-input" type="number" name="max-price" placeholder="500" max="500" step="10">
+              - <input class="catalog-form-input" type="number" name="max-price" value="500" max="500" step="10">
               ₽
             </label>
+            </div>
+            <div class="range">
+              <div class="range-scale">
+                <div class="range-bar" style="left: 32px; right: 58px;">
+                  <button class="range-toggle toggle-min" type="button">
+                    <span class="visually-hidden">Изменить минимальную цену</span>
+                  </button>
+                  <button class="range-toggle toggle-max" type="button">
+                    <span class="visually-hidden">Изменить максимальную цену</span>
+                  </button>
+                </div>
+              </div>
+
+            </div>
           </fieldset>
           <fieldset class="catalog-form-group">
+            <div class="range-wrapper-inputs">
             <legend class="catalog-form-group-title">Жирность:</legend>
+          </div>
+<ul class="catalog-form-item-list catalog-form-wrapper-labels">
+<li class="catalog-form-item">
             <label class="control">
-              <input class="visually-hiden control-input" type="radio" name="fatness">
+              <input class="visually-hidden control-input" type="radio" name="fatness">
               <span class="control-mark"></span>
               <span class="control-label">0%</span>
             </label>
+            </li>
+<li class="catalog-form-item">
             <label class="control">
               <input class="visually-hidden control-input" type="radio" name="fatness" checked>
               <span class="control-mark"></span>
               <span class="control-label">до 10%</span>
             </label>
+            </li>
+<li class="catalog-form-item">
             <label class="control">
-              <input class="visually-hiden control-input" type="radio" name="fatness">
+              <input class="visually-hidden control-input" type="radio" name="fatness">
               <span class="control-mark"></span>
               <span class="control-label">до 30%</span>
             </label>
+            </li>
+<li class="catalog-form-item">
             <label class="control">
-              <input class="visually-hiden control-input" type="radio" name="fatness">
+              <input class="visually-hidden control-input" type="radio" name="fatness">
               <span class="control-mark"></span>
               <span class="control-label">выше 30%</span>
             </label>
+            </li>
+
+          </ul>
           </fieldset>
           <fieldset class="catalog-form-group">
-            <legend class="catalog-form-group-title">Наполнители:</legend>
+            <div class="range-wrapper-inputs">
+            <legend class="catalog-form-group-title">Наполнители:</legend></div>
+
+<ul class="catalog-form-item-list catalog-form-wrapper-labels catalog-form-item-list-checkbox">
+  <li class="catalog-form-item">
             <label class="control">
               <input class="visually-hidden control-input" type="checkbox" name="chocolate" checked>
               <span class="control-mark"></span>
               <span class="control-label">шоколадные</span>
             </label>
+            </li>
+<li class="catalog-form-item">
             <label class="control">
               <input class="visually-hidden control-input" type="checkbox" name="powdered sugar" checked>
               <span class="control-mark"></span>
-              <span class="control-label">сахарные присыпки</span>
+              <span class="control-label">сахарные посыпки</span>
             </label>
+            </li>
+<li class="catalog-form-item">
             <label class="control">
               <input class="visually-hidden control-input" type="checkbox" name="fruit">
               <span class="control-mark"></span>
               <span class="control-label">фрукты</span>
             </label>
+            </li>
+<li class="catalog-form-item">
             <label class="control">
               <input class="visually-hidden control-input" type="checkbox" name="syrup">
               <span class="control-mark"></span>
               <span class="control-label">сиропы</span>
             </label>
+            </li>
+<li class="catalog-form-item">
             <label class="control">
               <input class="visually-hidden control-input" type="checkbox" name="jam">
               <span class="control-mark"></span>
               <span class="control-label">джемы</span>
             </label>
+            </li>
+
+          </ul>
           </fieldset>
-          <button class="button" type="submit">Применить</button>
+          <button class="button-catalog-form" type="submit">Применить</button>
         </form>
       </section>
       <section class="assortment assortment-catalog">
@@ -371,13 +416,29 @@
           </li>
         </ul>
         <div class="pagination-wrap">
-          <button class="button pagination-wrap-button" type="button">Показать еще</button>
+          <button class="button pagination-wrap-button" type="button">Показать ещё</button>
           <ul class="pagination reset-list">
-            <li class="pagination-item">
-              <a class="pagination-link pagination-prev pagination-disabled">
+            <li class=" pagination-item-button-prev">
+              <button class="pagination-link-button pagination-prev pagination-disabled" type="button">
+                <svg aria-hidden="true" focusable="false" width="6" height="12" viewBox="0 0 6 12" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M5.8033 1.80521C6.063 1.54551 6.063 1.12446 5.8033 0.864757C5.54361 0.605058 5.12255 0.605058 4.86285 0.864757L0.194774 5.53284C-0.0640686 5.79168 -0.0649218 6.21081 0.192214 6.47071C0.193377 6.47189 0.194544 6.47307 0.195717 6.47424L4.8638 11.1423C5.12349 11.402 5.54455 11.402 5.80425 11.1423C6.06395 10.8826 6.06395 10.4616 5.80425 10.2019L1.60545 6.00307L5.8033 1.80521Z"
+                    fill="#2D3440" />
+                </svg>
                 <span class="visually-hidden">Предыдущая страница </span>
-              </a>
+              </button>
             </li>
+            <li class=" pagination-item-button-next">
+              <button class="pagination-link-button pagination-next" type="button">
+                <svg aria-hidden="true" focusable="false" width="7" height="12" viewBox="0 0 7 12" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M1.13526 0.864757C0.875566 0.605058 0.454511 0.605058 0.194813 0.864757C-0.0648862 1.12446 -0.0648862 1.54551 0.194813 1.80521L4.39609 6.00649L0.194774 10.2078C-0.0649247 10.4675 -0.0649247 10.8886 0.194774 11.1483C0.454473 11.408 0.875527 11.408 1.13523 11.1483L5.80394 6.47955C5.80489 6.47861 5.80583 6.47767 5.80678 6.47672C6.06648 6.21702 6.06648 5.79597 5.80678 5.53627L1.13526 0.864757Z"
+                    fill="#2D3440" />
+                </svg>
+                <span class="visually-hidden">Следующая страница</span>
+              </button>
             <li class="pagination-item">
               <a class="pagination-link pagination-current">1</a>
             </li>
@@ -393,10 +454,6 @@
             <li class="pagination-item">
               <a class="pagination-link" href="#">5</a>
             </li>
-            <li class="pagination-item">
-              <a class="pagination-link pagination-next" href="#">
-                <span class="visually-hidden">Следующая страница</span>
-              </a>
             </li>
           </ul>
         </div>
