--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
+              <svg class="navigation-link-basket" aria-hidden="true" focusable="false" width="17" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.313.49a.667.667 0 0 0 0 1.333h2.06l.54 2.696a.662.662 0 0 0 .011.056l1.09 5.44a1.97 1.97 0 0 0 1.962 1.586h6.325a1.97 1.97 0 0 0 1.963-1.586l.001-.005 1.043-5.47a.667.667 0 0 0-.655-.791H5.12l-.545-2.724A.667.667 0 0 0 3.92.49H1.313zM6.32 9.754l-.935-4.672h9.462l-.892 4.675a.637.637 0 0 1-.636.51H6.958a.637.637 0 0 1-.637-.512v-.001zm-1.11 4.44a1.318 1.318 0 1 1 2.636 0 1.318 1.318 0 0 1-2.637 0zm7.17 0a1.318 1.318 0 1 1 2.636 0 1.318 1.318 0 0 1-2.637 0z" fill="#2D3440"/></svg>
+
               <span class="main-navigation-basket">
                 Пусто
               </span>
@@ -398,11 +400,11 @@
                   <span class="visually-hidden">Посмотреть дополнительную информацию</span>
                 </button>
               </span>
-              <input type="text" id="form-label-date" name="date-delivery" placeholder="01.04.2020">
+              <input class="field"  type="text" id="form-label-date" name="date-delivery" placeholder="01.04.2020">
             </p>
             <p class="field-group form-delivery-phone">
               <span class="form-label"><label for="form-label-phone">Телефон</label></span>
-              <input type="text" id="form-label-phone" name="phone" placeholder="+7 800 999-00-00">
+              <input  class="field" type="text" id="form-label-phone" name="phone" placeholder="+7 800 999-00-00">
             </p>
             <p class="field-group form-delivery-adress">
               <span class="form-label form-label-icon">
@@ -411,7 +413,7 @@
                   <span class="visually-hidden">Посмотреть дополнительную информацию</span>
                 </button>
               </span>
-              <input type="text" id="form-label-adres" name="adres" placeholder="ул. Большая Конюшенная, 19/8">
+              <input  class="field" type="text" id="form-label-adres" name="adres" placeholder="ул. Большая Конюшенная, 19/8">
             </p>
             <span class="button-pink-wrap link-form-wrap"><button class="link-form button button-pink"
                 type="button"><span>Отправить</span></button></span>
@@ -428,7 +430,6 @@
           <p class="contacts-time">(с 10 до 20 ежедневно)</p>
           <span class="button-pink-wrap"><button class="button button-pink" type="button">Форма обратной
               связи</button></span>
-          <!-- ggggggg -->
         </div>
       </section>
     </main>
